--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <style>
       body {
-        font-family: ui-sans, sans-serif;
+        font-family: ui-sans-serif, sans-serif;
         font-size: 1.05em;
         line-height: 1.5em;
         margin: auto;
