refactor: more specific file names

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </body>
 
   <script type="module">
-    import Router from "./src/lib.js";
+    import Router from "./src/routeutil.js";
 
     function render(html) {
       const output = document.querySelector("output");
